

                 SCons - a software construction tool

                            Change Log



RELEASE 0.XX - XXX

  From Steven Knight:

  - Fix the wix Tool module to handle null entries in $PATH variables.

  - Move the documentation of Install() and InstallAs() from the list
    of functions to the list of Builders (now that they're implemented
    as such).



RELEASE 0.97.0d20070809 - Fri, 10 Aug 2007 10:51:27 -0500

  From Lars Albertsson:

  - Don't error if a #include line happens to match a directory
    somewhere on a path (like $CPPPATH, $FORTRANPATH, etc.).

  From Mark Bertoglio:

  - Fix listing multiple projects in Visual Studio 7.[01] solution files,
    including generating individual project GUIDs instead of re-using
    the solution GUID.

  From Jean Brouwers:

  - Add /opt/SUNWspro/bin to the default execution PATH on Solaris.

  From Allan Erskine:

  - Only expect the Microsoft IDL compiler to emit *_p.c and *_data.c
    files if the /proxy and /dlldata switches are used (respectively).

  From Steven Knight:

  - Have --debug=explain report if a target is being rebuilt because
    AlwaysBuild() is specified (instead of "unknown reasons").

  - Support {Get,Set}Option('help') to make it easier for SConscript
    files to tell if a help option (-h, --help, etc.) has been specified.

  - Support {Get,Set}Option('random') so random-dependency interaction
    with CacheDir() is controllable from SConscript files.

  - Add a new AddOption() function to support user-defined command-
    line flags (like --prefix=, --force, etc.).

  - Push and retrieve built symlinks to/from a CacheDir() as actual
    symlinks, not by copying the file contents.

  - Fix how the Action module handles stringifying the shared library
    generator in the Tool/mingw.py module.

  - When generating a config.h file, print "#define HAVE_{FEATURE} 1"
    instad of just "#define HAVE_{FEATURE}", for more compatibility
    with Autoconf-style projects.
